--- a/destinations.htm
+++ b/destinations.htm
@@ -5,6 +5,7 @@
     <meta name="Description" content="destinations">
     <meta name="keywords" content="travel, destinations">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <title></title>
 </head>
