--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="Description" content="Tours and Travels site">
     <meta name="keywords" content="Tours, Vacation, Travel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <title></title>
 </head>
