--- a/index.htm
+++ b/index.htm
@@ -76,6 +76,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     
     <!--Site footer -->
     <footer id="footer">
+        <audio id="audioplayer" src="AudioVideo/vacation.mp3" controls autoplay loop></audio>
         <p>&copy; Copyright 2019 Karanja Tours and Travels</p>
     </footer>
     
