--- a/about.htm
+++ b/about.htm
@@ -46,9 +46,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <section id="main_col">
         <div class="main">
             <p>
-                Karanja Tours and Travels has been in business as a full-service travel agency since 2009. We have a team of travel specialists who are renowned for providing personalized service for all your corporate and leisure travel needs. 
-            </p>
-            <p>
+                Karanja Tours and Travels has been in business as a full-service travel agency since 2009. We have a team of travel specialists who are renowned for providing personalized service for all your corporate and leisure travel needs.<br>
                 Our agents are veterans at corporate travel and have traveled the globe gathering information, details and suggestions to truly tailor a vacation, wedding or honeymoon to meet your needs and preferences.
             </p>
         </div>
@@ -64,7 +62,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <section id="main_col">
         <div class="main">
             <p>
-                >The cost is free to you<br>
+                >The cost is free to you.<br>
                 >Travel advisor works for you and your family.<br>
                 >Travel advisor shares knowledge and helps you make the best decision.<br>
                 >And most importantly, your travel advisor will find you the lowest price.
