--- a/destinations.htm
+++ b/destinations.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="transform.css">
     <title></title>
 </head>
 
