--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="transform.css">
     <title></title>
 </head>
 
@@ -24,7 +25,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <header>
         <div class="main">
             <div id="logo">
-                <h1>KARANJA TOURS AND TRAVELS</h1> 
+                <h1>KARANJA TOURS AND TRAVELS</h1>  
             </div>
             <nav>
                 <ul>
@@ -34,6 +35,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
                     <li><a href="about.htm">About Us?</a></li>
                     <li><a href="contact.htm">Contact Us</a></li>
                 </ul>
+                 
             </nav>
         </div>
     </header>
