--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,6 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="transform.css">
-    <title></title>
 </head>
 
 <body>
@@ -51,17 +50,17 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <section id="main_col">
         <div class="main">
             <div class="locations">
-                <img src="Images/Safari.jpg" alt="Safari" height="200px" width="300px">
+                <img src="Images/Safari.jpg" alt="Safari" height="200" width="300">
                 <h3>Africa</h3>
                 <p>Visit the wide plains of the Serengeti and take a Safari tour!</p>
             </div>
             <div class="locations">
-                <img src="Images/Cruise.jpg" alt="Cruise" height="200px" width="300px">
+                <img src="Images/Cruise.jpg" alt="Cruise" height="200" width="300">
                 <h3>Island Cruise</h3>
                 <p>Come get your Sea legs!</p>
             </div>
             <div class="locations">
-                <img src="Images/south_america.jpg" alt="Beaches" height="200px" width="300px">
+                <img src="Images/south_america.jpg" alt="Beaches" height="200" width="300">
                 <h3>Brazil</h3>
                 <p>Visit the tranquil beaches in Brazil and Samba all night!</p>
             </div>
