--- a/response.htm
+++ b/response.htm
@@ -21,9 +21,12 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
 </head>
 
 <body>
-    <h1>A vacation of your dreams awaits you!</h1>
-    <p>Thank you for contacting Karanja Tours and Travel. One of our agents
+    <div class="response">
+        <h1>A vacation of your dreams awaits you!</h1>
+        <p>Thank you for contacting Karanja Tours and Travel. One of our agents
         will get back to you soon.
-    </p>
+        </p>
+    </div>
+    
 </body>
 </html>
