--- a/services.htm
+++ b/services.htm
@@ -83,7 +83,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
             <p>The Serengeti and Gorilla's of Rwanda - Save $300 on airfare</p>
             <p>Contact us by phone or email:<br>
                 555-111-2222<br>
-                <a href="emailto:kellytourstravels@toursandtravel.com">kellytourstravels@toursandtravel.com</a></p>
+                <a href="https://salukinet.siu.edu/">kellytourstravels@toursandtravel.com</a></p>
             <form action="contact.htm" method="get">
                 <button type="submit" class="buttons">Start Planning</button>
             </form>
