--- a/destinations.htm
+++ b/destinations.htm
@@ -32,27 +32,27 @@
     <section id="main_col">
         <div class="main">
             <div class="destinations">
-                <img src="Images/Safari.jpg" alt="Safari" height="200px" width="300px">
+                <img src="Images/Safari.jpg" alt="Safari" height="200" width="300">
                 <h3>African Safari - Magical!</h3>
                 <p>Africa is an incredible destination in so many ways – it is the kind of destination that will touch all of your senses in a myriad of ways, and once all is said and done you probably won’t be the same again.</p>
             </div>
             <div class="destinations">
-                <img src="Images/south_america.jpg" alt="Beaches" height="200px" width="300px">
+                <img src="Images/south_america.jpg" alt="Beaches" height="200" width="300">
                 <h3>Americas - Adventurous!</h3>
                 <p>Zip-line your way across Costa Rica or snorkel the cenotes of Mexico. If you prefer a more tranquil experience, hit the beaches of Baja or Riviera Maya and let the fruity drinks flow under your breezy cabana.</p>
             </div>
             <div class="destinations">
-                <img src="Images/Asia.jpg" alt="Asia" height="200px" width="300px">
+                <img src="Images/Asia.jpg" alt="Asia" height="200" width="300">
                 <h3>Asia - Tranquil!</h3>
                 <p>Asia is full of scenic diversity and ancient traditions, of tranquil temples and modern urban excitement. </p>
             </div>
             <div class="destinations">
-                <img src="Images/Europe.jpg" alt="Europe" height="200px" width="300px">
+                <img src="Images/Europe.jpg" alt="Europe" height="200" width="300">
                 <h3>Europe - Historic!</h3>
                 <p>Travel through unique regions of Europe enjoying delicious organic cuisine, world-class art galleries, chatting with friendly locals at an historic pub or venturing to an amazing choice of UNESCO World Heritage sites. </p>
             </div>
             <div class="destinations">
-                <img src="Images/Cruise.jpg" alt="Cruise" height="200px" width="300px">
+                <img src="Images/Cruise.jpg" alt="Cruise" height="200" width="300">
                 <h3>Cruises - Ahoy!</h3>
                 <p>One of the greatest aspects of cruising is there’s something for everyone.  Popular cruises offer great value for your dollar and an incredibly diverse range of amenities and activities. On board, experience exceptional service and a variety of dining options.</p>
             </div>
