--- a/about.htm
+++ b/about.htm
@@ -17,7 +17,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
-    <title></title>
+    <title>Agency about us page</title>
 </head>
 <!-- logo -->
 <body>
@@ -38,12 +38,12 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
         </div>
     </header>
     <!-- About -->
-    <section id="about">
+    <section class="about">
         <div class="main">
             <h1>About Karanja Tours and Travels</h1>
         </div>
     </section>
-    <section id="main_col">
+    <section class="main_col">
         <div class="main">
             <p>
                 Karanja Tours and Travels has been in business as a full-service travel agency since 2009. We have a team of travel specialists who are renowned for providing personalized service for all your corporate and leisure travel needs.<br>
@@ -52,14 +52,14 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
         </div>
     </section>
     
-    <section id="about">
+    <section class="about">
         <div class="main">
             <h1>Why use a Travel Agent?</h1>
             <p><strong>There are a ton of reasons to use a travel agent, but it boils down to:</strong></p>
         </div>
     </section>
         
-    <section id="main_col">
+    <section class="main_col">
         <div class="main">
             <p>
                 >The cost is free to you.<br>
