--- a/contact.htm
+++ b/contact.htm
@@ -17,7 +17,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
-    <title></title>
+    <title>Contact Page</title>
 </head>
 <!-- logo -->
 <body>
@@ -60,7 +60,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
                     <input type="email" required placeholder="Email Address">
                
                     <label>Phone:</label>
-                    <input type="Phone" required placeholder="Phone">
+                    <input type="tel" required placeholder="Phone">
                 </div>
                 <div>
                     <label>Vacation Type:</label>
