--- a/response.htm
+++ b/response.htm
@@ -17,9 +17,9 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
-    <title></title>
+    <title>Form Response Page</title>
 </head>
-
+<!-- Form response information -->
 <body>
     <div class="response">
         <h1>A vacation of your dreams awaits you!</h1>
