--- a/destinations.htm
+++ b/destinations.htm
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="transform.css">
-    <title></title>
+    <title>Destination Page</title>
 </head>
 
 <body>
