--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="transform.css">
+    <title>Main Page</title>
 </head>
 
 <body>
