--- a/services.htm
+++ b/services.htm
@@ -17,7 +17,7 @@ Tested: Nov 10, 2019; Passed on Firefox and Chrome browsers.
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="main.css">
-    <title></title>
+    <title>Services</title>
 </head>
 <!-- logo -->
 <body>
